--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -40,11 +40,13 @@
         {% endfor %}
         <div class="feature">
        <div class="feature-icon"><i class="icofont-check"></i></div>
+       <div class="text-features">
         <div class="feature-text"><b>Free Shipping</b></div>
-        <div class="feature-price">a $8 Value</div>
-        <img class="feature-img" src="{{ 'thirty-day-product-chalenge-06.png' | asset_url  }}" width="92" height="92" alt="">
+          <div class="feature-price">a $8 Value</div>
+          <img class="feature-img" src="{{ 'thirty-day-product-chalenge-06.png' | asset_url  }}" width="92" height="92" alt="">
+          </div>
         </div>
-      </div>
+       </div>
     </div>
   </div>
 </section>
