--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -7,7 +7,9 @@
 |<b>Free Shipping </b>:8*thirty-day-product-chalenge-06.png
 |<b>Community support</b> with 100K+ peers:0*thirty-day-product-chalenge-07.png
 |<b>24/7 Customer Support</b> (phone, email, or live chat):0*thirty-day-product-chalenge-08.png" | split: "|" %}
-
+ {% if product.title contains 'Curalin' %}
+ {% assign product.title=curalin_title %}
+ {% endif %}
 <section id="product-feature-section">
   <div class="container">
     
@@ -17,7 +19,7 @@
            <div class="feature">
                     <div class="feature-icon"><i class="icofont-check"></i></div>
                     <div class="text-features">
-                      {% if prod.title == 'Curalin' %}
+                      {% if curalin_title %}
                       <div class="feature-text"><b>30 day supply of Curalin</b></div>
                       <div class="feature-text">(180 capsules)</div>
                       {% else %}
@@ -31,7 +33,7 @@
                         <div class="feature-price">a {{ price | money_without_trailing_zeros }} Value</div>
                       {% endif %}
                     </div>
-                    {% if prod.title == 'Curalin' %}
+                    {% if curalin_title %}
                     <img class="feature-img" src="{{ prod.custom.bottle_image | img_url: 'original'  }}" width="92" height="92" alt="">
                     {% else %}
                     <img class="feature-img" src="{{ prod.images[0].src | img_url: 'original'  }}" width="92" height="92" alt="">
