--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -7,7 +7,7 @@
 |<b>Free Shipping </b>:8*thirty-day-product-chalenge-06.png
 |<b>Community support</b> with 100K+ peers:0*thirty-day-product-chalenge-07.png
 |<b>24/7 Customer Support</b> (phone, email, or live chat):0*thirty-day-product-chalenge-08.png" | split: "|" %}
- {% if product.title contains 'Curalin' %}
+ {% if product.title == 'Curalin' %}
  {% assign product.title=curalin_title %}
  {% endif %}
 <section id="product-feature-section">
