--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -16,7 +16,7 @@
            <div class="feature">
                     <div class="feature-icon"><i class="icofont-check"></i></div>
                     <div class="text-features">
-                      {% if product.title contains "CuraLin" %}
+                      {% if prod.title contains "CuraLin" %}
                       <div class="feature-text"><b>30 day supply of Curalin</b></div>
                       <div class="feature-text">(180 capsules)</div>
                       {% else %}
@@ -30,7 +30,7 @@
                         <div class="feature-price">a {{ price | money_without_trailing_zeros }} Value</div>
                       {% endif %}
                     </div>
-                    {% if product.title contains "CuraLin" %}
+                    {% if prod.title contains "CuraLin" %}
                     <img class="feature-img" src="{{ prod.custom.bottle_image | img_url: 'original'  }}" width="92" height="92" alt="">
                     {% else %}
                     <img class="feature-img" src="{{ prod.images[0].src | img_url: 'original'  }}" width="92" height="92" alt="">
