--- a/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box-thirty-days.liquid
@@ -14,7 +14,7 @@
 {% assign original_item_price = var.price | divided_by: bottle_quantity %}
 
 
-<div class="variant-notice special"><p><b>Special offer- Value of {{ original_item_cap_total }}!</b></p></div>
+<div class="variant-notice special"><p><b>Special offer- Value of {{ product.compare_at_price }}!</b></p></div>
 <div class="variant-box">
   {% if isCuralinContent %}
   <div class="radio-box">
