--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -23,7 +23,7 @@
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="feature-text">{{ prod.title }}</div>
             {% assign price = prod.price %}
-            {% if price == '0' %}
+            {% if prod.price == 0.00 %}
             <div class="feature-price priceless">Priceless</div>
             {% else %}
             <div class="feature-price">{{ price | times: 100 | money_without_trailing_zeros }}<sup>00</sup> Value</div>
