--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -17,7 +17,7 @@
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
     
       <div class="features">
-        {% render 'thirty-day-product-challenge-section', istotal: true %}
+        {% render 'thirty-day-product-challenge-section', isTotal: true %}
         {% comment %} {% assign total = 0 %}
         {% for feature in features %}
           <div class="feature">
