--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -57,21 +57,21 @@
     </div>
   </div>
 </section>
-{% if isTotal %}
+{% if isLP %}
 <style>
-  #challenge-features-section .container {
+  #product-feature-section .container {
     font-weight: bold;
     position: relative;
   }
 
-  #challenge-features-section {
+  #product-feature-section {
     position: relative;
     color: var(--dark-green);
     padding: 50px 0;
     line-height: 1.2em;
   }
 
-  #challenge-features-section h3 {
+  #product-feature-section h3 {
     font-family: 'PP Radio Grotesk';
     color: var(--dark-green);
     font-weight: 700;
@@ -86,7 +86,7 @@
     width: fit-content;
   }
 
-  #challenge-features-section .maintained {
+  #product-feature-section .maintained {
     text-align: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
@@ -98,24 +98,24 @@
     padding-bottom: 40px;
   }
 
-  #challenge-features-section .features-wrapper {
+  #product-feature-section .features-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
   }
 
-  #challenge-features-section .main-image {
+  #product-feature-section .main-image {
     max-width: 55%;
   }
 
-  #challenge-features-section .features {
+  #product-feature-section .features {
     max-width: 45%;
     display: flex;
     flex-direction: column;
   }
 
-  #challenge-features-section .features .feature {
+  #product-feature-section .features .feature {
     position: relative;
     display: flex;
     align-items: center;
@@ -127,11 +127,11 @@
    
   }
 
-  #challenge-features-section .features .feature:nth-child(8) {
+  #product-feature-section .features .feature:nth-child(8) {
     border-bottom: unset;
   }
 
-  #challenge-features-section .features .feature .feature-icon {
+  #product-feature-section .features .feature .feature-icon {
     background: var(--light-green);
     color: white;
     border-radius: 50%;
@@ -145,25 +145,25 @@
   }
 
 
-  #challenge-features-section .features .feature .feature-text {
+  #product-feature-section .features .feature .feature-text {
     display: flex;
     flex-direction: column;
     max-width: 404px;
     padding-right: 75px;
   }
 
-  #challenge-features-section .features .feature .feature-price {
+  #product-feature-section .features .feature .feature-price {
     width: 89px;
     position: absolute;
     right: 0;
     color:  var(--dark-brown);
   }
 
-  #challenge-features-section .features .feature .feature-price.priceless {
+  #product-feature-section .features .feature .feature-price.priceless {
     color: #95A157;
   }
   
-  #challenge-features-section .features .feature .feature-price sup {
+  #product-feature-section .features .feature .feature-price sup {
     font-size: 10px;
     position: relative;
     top: 1px;
@@ -210,7 +210,7 @@
     text-align: center;
   }
 
-  #challenge-features-section .cta-btn {
+  #product-feature-section .cta-btn {
     font-weight: 100;
     background: var(--orange);
     text-align: center;
@@ -228,52 +228,52 @@
     margin-top: -60px;
   }
 
-  #challenge-features-section .cta-btn:hover {
+  #product-feature-section .cta-btn:hover {
     background: #FFB22D;
     color: white;
   }
 
   @media screen and (max-width: 898px) {
-    #challenge-features-section .features .feature .feature-price {
+    #product-feature-section .features .feature .feature-price {
       width: 73px;
   
     }
   }
 
   @media screen and (max-width: 768px) {
-    #challenge-features-section .container {
+    #product-feature-section .container {
       padding: 0 15px;
     }
 
-    #challenge-features-section h3 {
+    #product-feature-section h3 {
       font-size: 32px;
       line-height: 35px;
     }
 
-    #challenge-features-section .maintained {
+    #product-feature-section .maintained {
       font-size: 29px;
       line-height: 30px;
       padding-bottom: unset;
     }
 
-    #challenge-features-section .main-image {
+    #product-feature-section .main-image {
       position: relative;
       min-width: 140%;
       right: 20%;
       bottom: 0;
     }
 
-    #challenge-features-section .features {
+    #product-feature-section .features {
       max-width: unset;
       width: 100%;
     }
 
-    #challenge-features-section .features .feature .feature-text {
+    #product-feature-section .features .feature .feature-text {
       max-width: unset;
       padding-right: 92px;
     }
 
-    #challenge-features-section .features .feature .feature-price {
+    #product-feature-section .features .feature .feature-price {
       width: 9vw;
     }
 
@@ -295,25 +295,25 @@
   }
 
   @media screen and (max-width: 627px) {
-    #challenge-features-section .features .feature .feature-price {
+    #product-feature-section .features .feature .feature-price {
         width: 11vw;
     }
   }
 
   @media screen and (max-width: 513px) {
-    #challenge-features-section .features .feature .feature-price {
+    #product-feature-section .features .feature .feature-price {
         width: 13vw;
     }
   }
 
   @media screen and (max-width: 434px) {
-    #challenge-features-section .features .feature .feature-price {
+    #product-feature-section .features .feature .feature-price {
         width: 15vw;
     }
   }
 
   @media screen and (max-width: 376px) {
-    #challenge-features-section .features .feature .feature-price {
+    #product-feature-section .features .feature .feature-price {
         width: 18vw;
     }
   }
