--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -15,7 +15,7 @@
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
-      {% render 'thirty-day-product-challenge-section', product: all_products["30-day-blood-sugar-challenge-pp"] isTotal: true, isLP: true %}
+      {% render 'thirty-day-product-challenge-section', product: all_products["30-day-blood-sugar-challenge-pp"], isTotal: true, isLP: true %}
       {% comment %} <div class="features">
        
       {% assign total = 0 %}
