--- a/snippets/thirty-day-product-challenge-section.liquid
+++ b/snippets/thirty-day-product-challenge-section.liquid
@@ -59,6 +59,9 @@
 </section>
 {% if isLP %}
 <style>
+  #product-feature-section {
+    grid-row: 1/3;
+  }
   #product-feature-section .container {
     font-weight: bold;
     position: relative;
