--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -82,14 +82,11 @@
   }
 
   #challenge-features-section .features-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    display: grid;
   }
 
   #challenge-features-section .main-image {
-    max-width: 55%;
+    grid-row: 1/2;
   }
 
   #challenge-features-section .features {
