--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,13 +1,3 @@
-{% assign item_price = 67 %}
-
-{% assign features = "<b>30 day supply of Curalin</b> (180 capsules):75
-|<b>30 day mouth-watering meal plan</b> including recipes and videos:29
-|<b>14 day easy-to-do movement and exercise plan</b> with videos:59
-|<b>Blood Sugar Explained</b> In Plain English (infographic):14
-|<b>Curalife Blood Sugar Healthy Cookbook</b>:40
-|<b>Free Shipping </b>:8
-|<b>Community support</b> with 100K+ peers:0|<b>24/7 Customer Support</b> (phone, email, or live chat):0" | split: "|" %}
-
 <section id="challenge-features-section">
   <div class="container">
     <h3>Everything you need</h3>
@@ -15,7 +5,7 @@
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
-      {% render 'thirty-day-product-challenge-section', product: all_products["30-day-blood-sugar-challenge-pp"], isTotal: true, isLP: true %}
+      {% render 'features-list', product: all_products["30-day-blood-sugar-challenge-pp"], isTotal: true, isLP: true %}
    
       <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
     </div>
