--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -20,12 +20,13 @@
                   <div class="feature-price">a {{ price | money_without_trailing_zeros }} Value</div>
                 {% endif %}
               </div>
-
+             {% unless isLP %}   
               {% if prod.title contains "CuraLin" %}
               <img class="feature-img" src="{{ prod.metafields.custom.bottle_image | img_url: 'original' }}" width="92" height="92" alt="">
               {% else %}
               <img class="feature-img" src="{{ prod.images[0].src | img_url: 'original'  }}" width="92" height="92" alt="">
               {% endif %}
+            {% endunless %}
             </div>
             {% if isTotal %}
             {% assign total = total | plus: price %}
