--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -87,7 +87,7 @@
   .features .feature .feature-text {
     display: flex;
     flex-direction: column;
-    max-width: 404px;
+    max-width: 395px;
     padding-right: 75px;
   }
 
@@ -95,6 +95,7 @@
     width: 89px;
     position: absolute;
     right: 0;
+    top: 20px;
     color:  var(--dark-brown);
   }
 
