--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -68,6 +68,9 @@
 
   #challenge-features-section .features-wrap {
     grid-row: 1/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
 
