--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -131,8 +131,8 @@
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
-    margin-left: 25%;
-    margin-top: -60px;
+    max-width: 430px;   
+    margin: 0 auto;
   }
 
   #challenge-features-section .cta-btn:hover {
