--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -110,6 +110,12 @@
       line-height: 30px;
       padding-bottom: unset;
     }
+
+    #challenge-features-section .features-wrap {
+      grid-row: 2/3;
+    
+    }
+  
     }
 </style>
 
