--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -115,6 +115,12 @@
       grid-row: 2/3;
     
     }
+
+    
+    #challenge-features-section .cta-btn {
+      grid-row: 3/4;
+      
+    }
   
     }
 </style>
