--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -90,8 +90,8 @@
   }
 
   #challenge-features-section .cta-btn:hover {
-    background: #FFB22D;
-    color: white;
+    background: #dd961a;
+    box-shadow: unset;
   }
 
 
