--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -79,8 +79,8 @@
 
         .price-today sup {
            position: relative;
-           top: -12px; 
-           right: 9px
+           top: -7px;
+           right: 18px;
          }
 
 
