--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -59,6 +59,8 @@
 
   #challenge-features-section .main-image {
     grid-row: 1/2;
+    max-height: 600px;
+    object-fit: contain;
   }
 
   #challenge-features-section .features-wrap {
