--- a/templates/product.all-in-one-curaeats.liquid
+++ b/templates/product.all-in-one-curaeats.liquid
@@ -311,6 +311,8 @@
   .ingredients-section h2 {
     max-width: 600px;
     font-weight: 400;
+    font-size: 35px;
+    max-width: 100%;
   }
 
 @media screen and (max-width: 768px) {
