--- a/snippets/lps-ingredients-slider.liquid
+++ b/snippets/lps-ingredients-slider.liquid
@@ -111,7 +111,9 @@
 
    .ingredients-section h2 {
       max-width: 600px;
-      font-weight: 400
+      font-weight: 400;
+      font-size: 35px;
+      max-width: 100%;
   }
 
    .ingredients-section .ingredients-sliders .ingredients-thumbs-slider .ingredients .ingredient {
