--- a/templates/product.all-in-one-curaeats.liquid
+++ b/templates/product.all-in-one-curaeats.liquid
@@ -309,7 +309,7 @@
   }
 
   .ingredients-section h2 {
-    max-width: 600px;
+    padding-bottom: 20px;
     font-weight: 400;
     font-size: 35px;
     max-width: 100%;
@@ -358,6 +358,12 @@
   .ingredients-section {
     background-color: unset;
   }
+
+  .ingredients-section h2 {
+    padding-bottom: unset;
+    font-size: 6vw;
+  }
+
 }
 </style>
 
