--- a/snippets/lps-ingredients-slider.liquid
+++ b/snippets/lps-ingredients-slider.liquid
@@ -110,10 +110,11 @@
   }
 
    .ingredients-section h2 {
-      max-width: 600px;
+      
       font-weight: 400;
       font-size: 35px;
       max-width: 100%;
+      padding-bottom: 20px;
   }
 
    .ingredients-section .ingredients-sliders .ingredients-thumbs-slider .ingredients .ingredient {
@@ -165,6 +166,11 @@
   @media screen and (max-width: 768px) {
     .ingredients-section {
         background-color: unset
+    }
+
+    .ingredients-section h2 {
+      padding-bottom: unset;
+      font-size: 6vw;
     }
 
     .ingredients-section .ingredients-sliders .ingredients-main-slider {
