--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -1,11 +1,10 @@
 <div class="product-thumbnails">
   <div class="product-slider">
     <div class="sliders-group">
-      {% if isCuralinContent %}
-        <img class="img-temp-mb" src="{{ 'product-aio-product-thumbnail-1.png' | asset_url }}" width="534" height="342" alt="">
-      {% else %}
+      {% unless isCuralinContent %}    
         <img class="img-temp-mb" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="534" height="342" alt="">
-      {% endif %}
+     {% endunless %}
+
       <div class="main-slider">
         <div id="product-main-slider-sc" class="swiper">
           <div class="swiper-wrapper">
@@ -248,7 +247,7 @@
     }
 
     .cta-section .product-container .product-thumbnails .product-slider .thumbs-slider {
-      display: none
+          display: {% unless isCuralinContent %} none {% endunless %};
     }
   }
 </style>
