--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -145,7 +145,7 @@
   }
 
   .cta-section .product-container .product-thumbnails .product-slider .main-slider .nav {
-    display: none;
+     display: {% unless isCuralinContent %}none{% endunless %};
   }
 
   .cta-section .product-container .product-thumbnails .product-slider .thumbs-slider {
