--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -198,11 +198,7 @@
       display: {% unless isCuralinContent %}none{% endunless %};
     }
 
-    .cta-section .product-container .product-thumbnails .product-slider .thumbs-slider {
-      
-      display: {% if isCuralinContent %}none{% endif %};
-     
-    }
+  
 
     .product-slider .sliders-group:before {
       content: "";
@@ -266,7 +262,7 @@
     }
 
     .cta-section .product-container .product-thumbnails .product-slider .thumbs-slider {
-          display: {% unless isCuralinContent %} none {% endunless %};
+          display: none ;
     }
   }
 </style>
