--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -262,7 +262,7 @@
     }
 
     .cta-section .product-container .product-thumbnails .product-slider .thumbs-slider {
-          display: none ;
+          display: {% unless isCuralinContent %}none{% endunless %} ;
     }
   }
 </style>
