--- a/sections/lps-video-reviews.liquid
+++ b/sections/lps-video-reviews.liquid
@@ -76,7 +76,7 @@
   </script>
 
   <script src="https://player.vimeo.com/api/player.js"></script>
-  <script>
+  {% comment %} <script>
     var player1 = new Vimeo.Player(document.querySelector('#review-video-1'));
     var player2 = new Vimeo.Player(document.querySelector('#review-video-2'));
     var player3 = new Vimeo.Player(document.querySelector('#review-video-3'));
@@ -93,7 +93,7 @@
         })
       });
     });
-  </script>
+  </script> {% endcomment %}
 
   <style>
     .video-reviews-section {
