--- a/snippets/lps-video-reviews-2.liquid
+++ b/snippets/lps-video-reviews-2.liquid
@@ -158,7 +158,7 @@
       }
   });
 </script>
-
+{% comment %} 
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script>
   var player1 = new Vimeo.Player(document.querySelector('#review-video-1'));
@@ -177,7 +177,7 @@
       })
     });
   });
-</script>
+</script> {% endcomment %}
 
 <style>
   .swiper-button-prev,
