--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -107,6 +107,11 @@
 
 <style>
 
+  .cta-section .product-image-wrapper {
+    grid-row: 1/3;
+    position: relative;
+  }
+
   .cta-section .product-container .product-thumbnails {
     grid-area: 1/1/3/2;
   }
@@ -183,6 +188,10 @@
   }
 
   @media screen and (max-width: 768px) {
+    .cta-section .product-image-wrapper {
+      grid-row: unset;
+    }
+
     .cta-section .product-container .product-thumbnails {
       grid-area: unset;
       grid-row: 2;
@@ -294,7 +303,33 @@
   });
 
   productSliderAllInOne = new Swiper('#product-main-slider-sc', {
-    
+    slidesPerView: 1,
+    spaceBetween: 15,
+    centeredSlides: true,
+    watchSlidesVisibility: true,
+    loop: false,
+    grabCursor: true,
+    slideToClickedSlide: true,
+    thumbs: {swiper: productThumbsAllInOne},
+    breakpoints: {
+      0: {
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: 'true',
+          type: 'bullets',
+        },
+        navigation: {
+          nextEl: '#product-main-slider-nav-next',
+          prevEl: '#product-main-slider-nav-prev',
+          disabledClass: 'disabled'
+        },
+        loop:true
+      },
+      760: {
+        pagination: {},
+        navigation: {}
+      }
+    }
   });
 
   {% if isCuralinContent %}
