--- a/templates/page.onboarding-thank-you.liquid
+++ b/templates/page.onboarding-thank-you.liquid
@@ -77,6 +77,6 @@
   else {
     console.log("No Params");
     $("h1").text("Sorry");
-    $("p").htme("There was an error with the page,<br> please contact us for support");
+    $("p").html("There was an error with the page,<br> please contact us for support");
   }
 </script>
