--- a/snippets/onboarding-quiz.liquid
+++ b/snippets/onboarding-quiz.liquid
@@ -1,5 +1,5 @@
 <section class="quiz-section" id="quiz-section">
-  <h2>Curalife’s supports your health journey with lifestyle tips!</h2>
+  <h2>Support your health journey with lifestyle tips!</h2>
   <div data-tf-widget="E2sTfAPl" data-tf-on-submit="submit" data-tf-opacity="100" data-tf-hidden="utm_source=,utm_medium=,utm_campaign=,utm_term=,utm_content=,email={{ customer.email }}" style="width:100%;height:500px;"></div>
   <script src="//embed.typeform.com/next/embed.js"></script>
 </section>
