--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -229,7 +229,7 @@
     }
 
     .cta-section .product-container .product-thumbnails .product-slider .main-slider .nav {
-      display: block;
+      display: flex;
     }
 
     .cta-section .product-container .product-thumbnails .product-slider .main-slider .nav.swiper-button-prev {
