--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -17,6 +17,7 @@
 {% render 'thirty-day-break-it-down' %}
 {% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Sweeter days ahead" %}
 {% render 'thirty-day-challenge-section' ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %}
-{% render 'thirty-day-video-reviews', maintitle: 'Real results from real people', ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %}
+{% comment %} {% render 'thirty-day-video-reviews', maintitle: 'Real results from real people', ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %} {% endcomment %}
+{% render 'lps-video-reviews-2', maintitle: 'Customers Reviews Of CuraLin' %}
 {% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Challenge Accepted!" %}
 {% render 'thirty-day-commitement' %}
