--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -42,11 +42,11 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     margin-top: 50px;
    
   }
-    .how-work .sub-title {
+    .how-work .container .sub-title {
       padding-top: 70px;
     }
 
-    .how-work .sub-title  {
+    .how-work .container .sub-title  {
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: 40px;
@@ -56,7 +56,7 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       color: #404733;
     }
 
-    .how-work .sub-text {
+    .how-work .container .sub-text {
       font-family: 'DM Sans';
       font-weight: 500;
       font-size: 20px;
@@ -66,35 +66,35 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       padding-bottom: 30px;
     }
 
-    .grid-wrapper{
+    .how-work .container .grid-wrapper{
       padding: 20px 70px;
     }
 
-    .grid-wrapper-mb {
+    .how-work .container .grid-wrapper-mb {
       position: relative;
     }
 
-    .grid-img-mb {
+    .how-work .container .grid-img-mb {
       display: none;
     }
 
-    .grid-img {
+    .how-work .container .grid-img {
       width: 76%;
     }
 
-    .how-work-wrapper {
+    .how-work .container .how-work-wrapper {
         display: flex;
         gap: 1vw;
         padding: 20px 70px;
     }
 
-    .how-work-text {
+    .how-work .container .how-work-text {
         display: flex;
         flex-direction: column;
         max-width: 25%;     
     }
 
-    .week-title {
+    .how-work .container .week-title {
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: clamp(20px, 2vw, 30px);
@@ -102,13 +102,13 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       color: #9EB069;
     }
 
-    .border-bottom-week {    
+    .how-work .container .border-bottom-week {    
       border-bottom: 2px solid #B9C86B;
       max-width: 150px;     
       padding: 10px;
     }
 
-    .week-text {
+    .how-work .container .week-text {
       padding: 20px 0;
       font-family: 'DM Sans';
       font-weight: 500;
@@ -118,11 +118,11 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
     }
 
     @media screen and (max-width: 849px) {
-        .grid-wrapper {
+      .how-work .container .grid-wrapper {
           display: none;
         }
 
-        .grid-img-mb {
+        .how-work .container .grid-img-mb {
           display: flex;
           position:absolute;
           padding: 13px;
@@ -142,21 +142,21 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         }
 
   
-        .how-work-wrapper {
+        .how-work .container .how-work-wrapper {
             flex-direction: column;
         }
 
-        .how-work-text {
+        .how-work .container .how-work-text {
            
             max-width: unset;     
         }
 
 
-        .week-title {
+        .how-work .container .week-title {
           line-height: 22px;
         }
 
-        .week-text { 
+        .how-work .container .week-text { 
           font-size: 18px; 
           line-height: unset;    
         }
@@ -164,12 +164,12 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       
     }
     @media screen and (max-width: 768px) {
-      .grid-img-mb {
+      .how-work .container .grid-img-mb {
         padding:12px;
       }
     }
     @media screen and (max-width: 475px) {
-      .grid-img-mb {
+      .how-work .container .grid-img-mb {
         padding:10px;
       }
     }
