--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -174,6 +174,12 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
         padding: 9px;
       }
     }
+
+    @media screen and (max-width: 350px) {
+      .grid-img-mb {
+        padding: 7px;
+      }
+    }
 </style>
 
 
