--- a/snippets/product-all-in-one-how-it-works.liquid
+++ b/snippets/product-all-in-one-how-it-works.liquid
@@ -101,6 +101,9 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
       font-size: clamp(20px, 2vw, 30px);
       letter-spacing: -0.01em;
       color: #9EB069;
+      max-width: 160px;
+      min-height: 80px;
+      
     }
 
     .border-bottom-week {    
@@ -155,6 +158,9 @@ Small Steps, Big Wins:Set yourself up for success! Learn the health habits that 
 
         .week-title {
           line-height: 22px;
+          max-width: unset;
+          min-height: unset;
+        
         }
 
         .week-text { 
